# nvimconf

./: RegisterMenu.reg  init.lua
graphite/: Cargo.toml
graphite/src/: frame.rs  layout.rs  main.rs  selector.rs  theme.rs
graphite/src/bars/: mod.rs
graphite/src/data/: input.rs  internal.rs  mod.rs
graphite/src/graph/: mod.rs
graphite/src/inspector/: mod.rs
graphite/src/table/: mod.rs
lua/: cmpsettings.lua  settings.lua
