[package]
name = "graphite"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
rand = "0.8.5"
log-panics = { version = "2", features = ["with-backtrace"]}
egui = { version = "0.29.1", features = [ "persistence" ]}
eframe = "0.29.1"
egui-phosphor = { version = "0.7.3", features = ["fill"] }
serde = { version = "1.0.210", features = [ "serde_derive" ]}
ron = "0.8"
anyhow = "1.0.89"
simple_logger = "5.0.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
strip = true
